<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_vacaciones"
            android:icon="@drawable/vacaciones"
            android:title="@string/menu_vacaciones" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/calendar"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/office"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/bithday"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/notifications"
            android:title="@string/menu_slideshow" />
    </group>
</menu>