<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.NewLandApps.NewlandApps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vacaciones"
        android:name="com.NewLandApps.NewlandApps.ui.vacaciones.vacacionesFragment"
        android:label="@string/menu_vacaciones"
        tools:layout="@layout/fragment_vacaciones"
        />
    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.NewLandApps.NewlandApps.ui.calendario.FragmentCalendar"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendar"
        />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.NewLandApps.NewlandApps.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.NewLandApps.NewlandApps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.NewLandApps.NewlandApps.ui.perfil.view.ProfileFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_profile"
        />
</navigation>